# doubleword-technical

./: .env  .env.example  .gitignore  AGENTS.md  BATCH_INFERENCE_TEST_REPORT.md  CODE_REVIEW.md  Dockerfile  Dockerfile.dev  OPERATIONS_RUNBOOK.md  README.md  agents.py  batch_inference_test_report.json  config.py  config.yaml  deploy-ray.sh  docker-compose-monitoring.yml  docker-compose-ray-data.yml  docker-compose-ray.yml  install_nvidia_container_toolkit.sh  main.py  openai_batch_client.py  optimization_guide.py  pyproject.toml  requirements.dev  requirements.txt  run_batch_inference_tests.py  sample_questions.json  setup.py  setup_hf_model.sh  setup_ray_cluster.sh  simple_batch_test_working.py  test_1000_batch.py  test_batch_job.py  test_direct_batch.py  test_integration.py  test_minimal_ray_serve.py  test_ray_data_1000.py  test_ray_serve.py  test_requirements.txt  test_sglang_ray_serve.py  (+3 more)
api/: gpu_scheduler.py  job_queue.py  main.py  metrics_collector.py  models.py  queue.py  routes.py  scheduler.py  worker.py
app/: api_server.py  api_server_simple.py  batch_inference_vllm_fixed.py  inference_metrics_exporter.py  llm_client.py  main.py  ray_cluster_fixed.py  ray_data_batch_inference.py  ray_serve_vllm_simple.py  sla_alerting.py
app/api/: auth.py  routes.py
app/core/: auth.py  cluster_manager.py  config.py  context.py  inference.py  job_manager.py  kv_cache.py  load_shedding.py  metrics.py  models.py  priority.py  processor.py  queue.py  redis_queue.py  simple_processor.py
app/models/: schemas.py
app/utils/: schemas.py
config/: config.yaml  docker-compose-monitoring.yml  grafana_dashboard.json  loki-config.yaml  nginx-ray-fallback.conf  prometheus-ray.yml  prometheus.yml  promtail-config.yaml  ray_alert_rules.yml  setup_ray_cluster.sh
deploy/: setup_production.sh
docker/: Dockerfile.api  Dockerfile.vllm  docker-compose.yml  setup.sh
docs/: DEPLOYMENT_UPDATE.md
engine/: model_config.yaml  vllm_runner.py
examples/: client_submit.ipynb  sample_batch.jsonl
monitoring/: prometheus.yml
pipeline/: inference.py  main.py  models.py  ray_batch.py  ray_utils.py
reports/: AGENTS_LAUNCHER.md  SYMBIOTE_ADVANCED_TEST_REPORT.md  SYMBIOTE_CHUNKED_PREFILL_ANALYSIS.md  SYMBIOTE_FIXES_REPORT.md  SYMBIOTE_KV_CACHE_STRESS_REPORT.md  SYMBIOTE_MODEL_STORAGE_ANALYSIS.md  SYMBIOTE_TESTING_COMPLETE.md  TESTING_ARTIFACTS_INDEX.md  TESTING_COMPLETE_SUMMARY.md
tests/: run_batch_inference_tests.py  run_matrix_tests.py  run_tests.py  symbiote_advanced_tests.py  symbiote_chunked_prefill_tests.py  symbiote_kv_cache_stress_tests.py  symbiote_model_storage_tests.py  symbiote_test_runner.py  test_api.py  test_batch.py  test_batch_inference_e2e.py  test_config_matrix.py  test_config_matrix_simple.py  test_fastapi.py  test_gpu_integration.py  test_hardware.py  test_inference_pipeline.py  test_job_queue.py  test_pipeline.py  test_production_scale.py  test_ray_serve_integration.py  test_scheduler.py  test_sla_simple.py  test_sla_validation.py  testing_agent.py  testing_symbiote.py
